tests/src/frontend/syntax/invalid/unused_local_1.sk
fun foo(): void {
  x = "";
  void
}
